--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf \"dist/**/*.js\" && tsc"
+    "test": "jest",
+    "build": "rimraf \"dist/**/*.js\" && tsc",
+    "lint": "eslint . --ext .ts"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +14,16 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/ioredis": "^5.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.8",
     "@types/redis": "^4.0.11",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
