--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
+    "@types/uuid": "^9.0.8",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
@@ -31,6 +32,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
-    "redis": "^4.6.13"
+    "redis": "^4.6.13",
+    "uuid": "^9.0.1"
   }
 }
